[UPDATE] Search Page

--- a/index-signedup.html
+++ b/index-signedup.html
@@ -47,7 +47,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="index.html">Home</a></li>
             <li><a href="#">Become a Lander</a></li>
-            <li><a href="#">John Dee</a></li>
+            <li><a href="#">John Doe</a></li>
             <li><a href="index.html" class="signup">Sign out</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
@@ -65,7 +65,7 @@
                 <form role="form">
                   <div class="col-md-6 col-sm-6 col-xs-6">
                     <div class="form-group">
-                      <label for="country">City</label>
+                      <label for="location">City</label>
                       <select class="form-control">
                         <option>Lisbon</option>
                         <option>Porto</option>
@@ -77,7 +77,7 @@
                   <!-- break -->
                   <div class="col-md-6 col-sm-6 col-xs-6">
                     <div class="form-group">
-                      <label for="location">Instrument Family</label>
+                      <label for="instrument">Instrument Family</label>
                       <select class="form-control">
                         <option>Brass</option>
                         <option>Strings</option>
@@ -96,17 +96,19 @@
                         <option>For Rent</option>
                       </select>
                     </div>
+                  </div>
+                  <!-- break -->
+                  <div class="col-md-6 col-sm-6 col-xs-6">
                     <div class="form-group">
                       <label for="minprice">Min Price</label>
                       <select class="form-control">
                         <option>< $10.99/day</option>
-                        <option>$</option>
-                        <option>$8,150</option>
-                        <option>$11,110</option>
+                        <option>$11/day - $30.99/day</option>
+                        <option>$31/day - $50.99/day</option>
+                        <option>> $51</option>
                       </select>
                     </div>
                   </div>
-                  <!-- break -->
                   <div class="col-md-12 col-sm-12"><input type="submit" name="submit" value="Search" class="btn btn-primary btn-lg btn-block"></div>
 
                 </form>
@@ -117,6 +119,182 @@
       </div>
     </div>
     <!-- end:header -->
+
+    <!-- begin:service -->
+    <div id="service">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <h2><small></small></h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-3 col-sm-6 col-xs-12">
+            <div class="service-container">
+              <div class="service-icon">
+                <a href="#"><i class="fa fa-music"></i></a>
+              </div>
+              <div class="service-content">
+                <h3>Instruments</h3>
+                <p>We have all main instruments.</p>
+              </div>
+            </div>
+          </div>
+          <!-- break -->
+          <div class="col-md-3 col-sm-6 col-xs-12">
+            <div class="service-container">
+              <div class="service-icon">
+                <a href="#"><i class="fa fa-thumbs-up"></i></a>
+              </div>
+              <div class="service-content">
+                <h3>Lorem ipsum dolor sit</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt.</p>
+              </div>
+            </div>
+          </div>
+          <!-- break -->
+          <div class="col-md-3 col-sm-6 col-xs-12">
+            <div class="service-container">
+              <div class="service-icon">
+                <a href="#"><i class="fa fa-umbrella"></i></a>
+              </div>
+              <div class="service-content">
+                <h3>Lorem ipsum dolor sit</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt.</p>
+              </div>
+            </div>
+          </div>
+          <!-- break -->
+          <div class="col-md-3 col-sm-6 col-xs-12">
+            <div class="service-container">
+              <div class="service-icon">
+                <a href="#"><i class="fa fa-lock"></i></a>
+              </div>
+              <div class="service-content">
+                <h3>Safe</h3>
+                <p>Exchange it safly.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- end:service -->
+
+    <!-- begin:content -->
+    <div id="content">
+      <div class="container">
+        <!-- begin:latest -->
+        <div class="row">
+          <div class="col-md-12">
+            <div class="heading-title">
+              <h2>Latest Instruments</h2>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-3 col-sm-6 col-xs-12">
+            <div class="property-container">
+              <div class="property-image">
+                <img src="img/img02.jpg" alt="arillo real estate theme">
+                <div class="property-price">
+                  <h4>Strings</h4>
+                  <span>$55<small>/day</small></span>
+                </div>
+                <div class="property-status">
+                  <span>For Rent</span>
+                </div>
+              </div>
+              <div class="property-features">
+                <span><i class="fa fa-calendar-o"></i> Now</span>
+                <span><i class="fa fa-truck"></i> No</span>
+                <span><i class="fa fa-clock-o"></i> 1 Y</span>
+              </div>
+              <div class="property-content">
+                <h3><a href="#">Electric Guitar</a> <small>Lisbon</small></h3>
+              </div>
+            </div>
+          </div>
+          <!-- break -->
+
+          <div class="col-md-3 col-sm-6 col-xs-12">
+            <div class="property-container">
+              <div class="property-image">
+                <img src="img/img03.jpg" alt="arillo real estate theme">
+                <div class="property-price">
+                  <h4>Percussion</h4>
+                  <span>$7<small>/day</small></span>
+                </div>
+                <div class="property-status">
+                  <span>For Rent</span>
+                </div>
+              </div>
+              <div class="property-features">
+                <span><i class="fa fa-calendar-o"></i> Now</span>
+                <span><i class="fa fa-truck"></i> Yes</span>
+                <span><i class="fa fa-clock-o"></i> 2 Y</span>
+              </div>
+              <div class="property-content">
+                <h3><a href="#">Drum</a> <small>Porto</small></h3>
+              </div>
+            </div>
+          </div>
+          <!-- break -->
+
+          <div class="col-md-3 col-sm-6 col-xs-12">
+            <div class="property-container">
+              <div class="property-image">
+                <img src="img/img04.jpg" alt="arillo real estate theme">
+                <div class="property-price">
+                  <h4>Keyboard</h4>
+                  <span>$200<small>/day</small></span>
+                </div>
+                <div class="property-status">
+                  <span>For Rent</span>
+                </div>
+              </div>
+              <div class="property-features">
+                <span><i class="fa fa-calendar-o"></i> 5 days</span>
+                <span><i class="fa fa-truck"></i> Yes</span>
+                <span><i class="fa fa-clock-o"></i> 5 M</span>
+              </div>
+              <div class="property-content">
+                <h3><a href="#">YAMAHA Piano</a> <small>Lisbon</small></h3>
+              </div>
+            </div>
+          </div>
+          <!-- break -->
+
+          <div class="col-md-3 col-sm-6 col-xs-12">
+            <div class="property-container">
+              <div class="property-image">
+                <img src="img/img05.jpg" alt="arillo real estate theme">
+                <div class="property-price">
+                  <h4>Strings</h4>
+                  <span>$150<small>/day</small></span>
+                </div>
+                <div class="property-status">
+                  <span>For Rent</span>
+                </div>
+              </div>
+              <div class="property-features">
+                <span><i class="fa fa-calendar-o"></i> 2 days</span>
+                <span><i class="fa fa-truck"></i> No</span>
+                <span><i class="fa fa-clock-o"></i> 1 Y</span>
+              </div>
+              <div class="property-content">
+                <h3><a href="#">Classic Violin</a> <small>Coimbra</small></h3>
+              </div>
+            </div>
+          </div>
+          <!-- break -->
+        </div>
+        <!-- end:latest -->
+      </div>
+    </div>
+    <!-- end:content -->
 
     <!-- begin:subscribe -->
     <div id="subscribe">
@@ -145,13 +323,12 @@
           <!-- break -->
           <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="widget">
-              <h3>Features</h3>
+              <h3>Terms</h3>
               <ul class="list-unstyled">
-                <li><a href="#">My Account</a></li>
-                <li><a href="#">How To</a></li>
-                <li><a href="#">Market Trend</a></li>
-                <li><a href="#">Android App</a></li>
-                <li><a href="#">IOS App</a></li>
+                <li><a href="#">Renter Terms</a></li>
+                <li><a href="#">Owner Terms</a></li>
+                <li><a href="#">Privacy</a></li>
+                <li><a href="#">Terms of Use</a></li>
               </ul>
             </div>
           </div>
@@ -171,13 +348,13 @@
           <!-- break -->
           <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="widget">
-              <h3>Features</h3>
+              <h3>oppr</h3>
               <ul class="list-unstyled">
-                <li><a href="#">My Account</a></li>
-                <li><a href="#">How To</a></li>
-                <li><a href="#">Market Trend</a></li>
-                <li><a href="#">Android App</a></li>
-                <li><a href="#">IOS App</a></li>
+                <li><a href="http://oppr.io/">Group</a></li>
+                <li><a href="http://dev.oppr.io/#team">Dev Team</a></li>
+                <li><a href="http://dev.oppr.io/#portfolio">Projects</a></li>
+                <li><a href="http://dev.oppr.io/#services">Hire Us</a></li>
+                <li><a href="http://dev.oppr.io/#contact">Contacts</a></li>
               </ul>
             </div>
           </div>
@@ -186,9 +363,9 @@
             <div class="widget">
               <h2>RentString</h2>
               <address>
-                <strong></strong>
+                <strong>IST</strong>
                 <br>
-
+                  Avenida Rovisco Pais 1
                 <br>
                 <br>
                 Telp. : +351-123456789<br>
@@ -252,7 +429,9 @@
           </div>
           <div class="modal-footer">
             <p>Don't have account ? <a href="#modal-signup"  data-toggle="modal" data-target="#modal-signup">Sign up here.</a></p>
-            <input type="submit" class="btn btn-primary btn-block btn-lg" value="Sign in">
+            <a href="index-signedup.html">
+              <input type="submit" class="btn btn-primary btn-block btn-lg" value="Sign in">
+            <a href="index-signedup.html">
           </div>
         </div>
       </div>
@@ -287,7 +466,9 @@
           </div>
           <div class="modal-footer">
             <p>Already have account ? <a href="#modal-signin" data-toggle="modal" data-target="#modal-signin">Sign in here.</a></p>
-            <input type="submit" class="btn btn-primary btn-block btn-lg" value="Sign up">
+            <a href="index-signedup.html">
+              <input type="submit" class="btn btn-primary btn-block btn-lg" value="Sign up">
+            </a>
           </div>
         </div>
       </div>
