--- a/index.html
+++ b/index.html
@@ -210,10 +210,10 @@
               <div class="property-features">
                 <span><i class="fa fa-calendar-o"></i> Now</span>
                 <span><i class="fa fa-truck"></i> No</span>
-                <span><i class="fa fa-clock-o"></i> 1 Year</span>
+                <span><i class="fa fa-clock-o"></i> 1 Y</span>
               </div>
               <div class="property-content">
-                <h3><a href="#">Electric Guitar</a> <small>Lisbon</small></h3>
+                <h3><a href="#" data-toggle="modal" data-target="#modal-signup">Electric Guitar</a> <small>Lisbon</small></h3>
               </div>
             </div>
           </div>
@@ -234,10 +234,10 @@
               <div class="property-features">
                 <span><i class="fa fa-calendar-o"></i> Now</span>
                 <span><i class="fa fa-truck"></i> Yes</span>
-                <span><i class="fa fa-clock-o"></i> 2 Years</span>
+                <span><i class="fa fa-clock-o"></i> 2 Y</span>
               </div>
               <div class="property-content">
-                <h3><a href="#">Drum</a> <small>Porto</small></h3>
+                <h3><a href="#" data-toggle="modal" data-target="#modal-signup">Drum</a> <small>Porto</small></h3>
               </div>
             </div>
           </div>
@@ -256,12 +256,12 @@
                 </div>
               </div>
               <div class="property-features">
-                <span><i class="fa fa-calendar-o"></i> in 5 days</span>
+                <span><i class="fa fa-calendar-o"></i> 5 days</span>
                 <span><i class="fa fa-truck"></i> Yes</span>
-                <span><i class="fa fa-clock-o"></i> 5 Months</span>
+                <span><i class="fa fa-clock-o"></i> 5 M</span>
               </div>
               <div class="property-content">
-                <h3><a href="#">YAMAHA Piano</a> <small>Lisbon</small></h3>
+                <h3><a href="#" data-toggle="modal" data-target="#modal-signup">YAMAHA Piano</a> <small>Lisbon</small></h3>
               </div>
             </div>
           </div>
@@ -280,225 +280,21 @@
                 </div>
               </div>
               <div class="property-features">
-                <span><i class="fa fa-calendar-o"></i> in 2 days</span>
+                <span><i class="fa fa-calendar-o"></i> 2 days</span>
                 <span><i class="fa fa-truck"></i> No</span>
-                <span><i class="fa fa-clock-o"></i> 1 Year</span>
+                <span><i class="fa fa-clock-o"></i> 1 Y</span>
               </div>
               <div class="property-content">
-                <h3><a href="#">Classic Violin</a> <small>Coimbra</small></h3>
+                <h3><a href="#" data-toggle="modal" data-target="#modal-signup">Classic Violin</a> <small>Coimbra</small></h3>
               </div>
             </div>
           </div>
           <!-- break -->
         </div>
         <!-- end:latest -->
-
-        <!-- begin:for-sale -->
-        <!-- <div class="row">
-          <div class="col-md-12">
-            <div class="heading-title">
-              <h2>Real Estate For Sale</h2>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-4 col-sm-4 col-xs-12">
-            <div class="property-container">
-              <div class="property-image">
-                <img src="img/img06.jpg" alt="arillo real estate theme">
-                <div class="property-price">
-                  <h4>Residential</h4>
-                  <span>$800,000</span>
-                </div>
-              </div>
-              <div class="property-content">
-                <h3><a href="#">The Urban Life</a> <small>22, JJ Road, Yogyakarta</small></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua.</p>
-              </div>
-              <div class="property-features">
-                <span><i class="fa fa-home"></i> 5,000 m<sup>2</sup></span>
-                <span><i class="fa fa-hdd-o"></i> 2 Bed</span>
-                <span><i class="fa fa-male"></i> 2 Bath</span>
-                <span><i class="fa fa-car"></i> 2 Garages</span>
-              </div>
-            </div>
-          </div> -->
-          <!-- break -->
-
-          <!-- <div class="col-md-4 col-sm-4 col-xs-12">
-            <div class="property-container">
-              <div class="property-image">
-                <img src="img/img07.jpg" alt="arillo real estate theme">
-                <div class="property-price">
-                  <h4>Residential</h4>
-                  <span>$800,000</span>
-                </div>
-              </div>
-              <div class="property-content">
-                <h3><a href="#">The Urban Life</a> <small>22, JJ Road, Yogyakarta</small></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua.</p>
-              </div>
-              <div class="property-features">
-                <span><i class="fa fa-home"></i> 6,000 m<sup>2</sup></span>
-                <span><i class="fa fa-hdd-o"></i> 3 Bed</span>
-                <span><i class="fa fa-male"></i> 2 Bath</span>
-                <span><i class="fa fa-building-o"></i> 2 Floors</span>
-              </div>
-            </div>
-          </div> -->
-          <!-- break -->
-
-          <!-- <div class="col-md-4 col-sm-4 col-xs-12">
-            <div class="property-container">
-              <div class="property-image">
-                <img src="img/img08.jpg" alt="arillo real estate theme">
-                <div class="property-price">
-                  <h4>Residential</h4>
-                  <span>$800,000</span>
-                </div>
-              </div>
-              <div class="property-content">
-                <h3><a href="#">The Urban Life</a> <small>22, JJ Road, Yogyakarta</small></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua.</p>
-              </div>
-              <div class="property-features">
-                <span><i class="fa fa-home"></i> 5,000 m<sup>2</sup></span>
-                <span><i class="fa fa-hdd-o"></i> 2 Bed</span>
-                <span><i class="fa fa-male"></i> 2 Bath</span>
-                <span><i class="fa fa-building-o"></i> 1 Floor</span>
-              </div>
-            </div>
-          </div> -->
-          <!-- break -->
-        </div>
-        <!-- end:for-sale -->
-
-        <!-- begin:for-rent -->
-        <!-- <div class="row">
-          <div class="col-md-12">
-            <div class="heading-title">
-              <h2>Real Estate For Rent</h2>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6 col-sm-12 col-xs-12">
-            <div class="property-container">
-              <div class="property-content-list">
-                <div class="property-image-list">
-                  <img src="img/img09.jpg" alt="arillo real estate theme">
-                  <div class="property-price">
-                    <h4>Villa</h4>
-                    <span>$30,000<small>/month</small></span>
-                  </div>
-                  <div class="property-features">
-                    <span><i class="fa fa-home"></i> 7,000 m<sup>2</sup></span>
-                    <span><i class="fa fa-hdd-o"></i> 3 Bed</span>
-                    <span><i class="fa fa-male"></i> 2 Bath</span>
-                    <span><i class="fa fa-building-o"></i> 2 Floors</span>
-                    <span><i class="fa fa-car"></i> 2 Garages</span>
-                  </div>
-                </div>
-                <div class="property-text">
-                  <h3><a href="#">Luxury Villa In Rego Park</a> <small>22, JJ Road, Yogyakarta</small></h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                  tempor incididunt ut labore et dolore magna aliqua.</p>
-                </div>
-              </div>
-            </div>
-          </div> -->
-          <!-- break -->
-
-          <!-- <div class="col-md-6 col-sm-12 col-xs-12">
-            <div class="property-container">
-              <div class="property-content-list">
-                <div class="property-text">
-                  <h3><a href="#">Land In Central Park</a> <small>22, JJ Road, Yogyakarta</small></h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                  tempor incididunt ut labore et dolore magna aliqua.</p>
-                </div>
-                <div class="property-image-list">
-                  <img src="img/img10.jpg" alt="arillo real estate theme">
-                  <div class="property-price">
-                    <h4>Villa</h4>
-                    <span>$30,000<small>/month</small></span>
-                  </div>
-                  <div class="property-features">
-                    <span><i class="fa fa-home"></i> 7,000 m<sup>2</sup></span>
-                    <span><i class="fa fa-hdd-o"></i> 3 Bed</span>
-                    <span><i class="fa fa-male"></i> 2 Bath</span>
-                    <span><i class="fa fa-building-o"></i> 2 Floors</span>
-                    <span><i class="fa fa-car"></i> 2 Garages</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div> -->
-          <!-- break -->
-        </div>
-        <!-- end:for-rent -->
       </div>
     </div>
     <!-- end:content -->
-
-    <!-- begin:testimony -->
-    <!-- <div id="testimony" style="background-image: url(img/img17.jpg);">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
-            <div id="testislider" class="carousel slide" data-ride="carousel">
-              <div class="carousel-inner">
-                <div class="item active">
-                  <div class="testimony-container">
-                    <div class="testimony-image" style="background: url(img/team01.jpg)"></div>
-                    <div class="testimony-content">
-                      <h3>Jane Doe</h3>
-                      <blockquote>
-                        <p>Phasellus quis lectus metus, at posuere neque. Sed pharetra nibh eget orci convallis at posuere leo convallis</p>
-                      </blockquote>
-                    </div>
-                  </div>
-                </div>
-                <div class="item">
-                  <div class="testimony-container">
-                    <div class="testimony-image" style="background: url(img/team02.jpg)"></div>
-                    <div class="testimony-content">
-                      <h3>Cen Lung</h3>
-                      <blockquote>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-                      </blockquote>
-                    </div>
-                  </div>
-                </div>
-                <div class="item">
-                  <div class="testimony-container">
-                    <div class="testimony-image" style="background: url(img/team03.jpg)"></div>
-                    <div class="testimony-content">
-                      <h3>Julia</h3>
-                      <blockquote>
-                        <p>Vivamus sit amet libero turpis, non venenatis urna. In blandit, odio convallis suscipit venenatis, ante ipsum cursus augue.</p>
-                      </blockquote>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <a class="left carousel-control" href="#testislider" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left"></span>
-              </a>
-              <a class="right carousel-control" href="#testislider" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right"></span>
-              </a>
-            </div>
-
-          </div>
-        </div>
-      </div>
-    </div> -->
-    <!-- end:testimony -->
 
     <!-- begin:subscribe -->
     <div id="subscribe">
@@ -618,15 +414,15 @@
             <form role="form">
               <div class="form-group">
                 <label for="emailAddress">Email address</label>
-                <input type="email" class="form-control input-lg" placeholder="Enter email">
+                <input type="email" class="form-control input-lg" placeholder="john@doe.me">
               </div>
               <div class="form-group">
                 <label for="password">Password</label>
-                <input type="password" class="form-control input-lg" placeholder="Password">
+                <input type="password" class="form-control input-lg" placeholder="&#8226;&#8226;&#8226;&#8226;&#8226;&#8226;&#8226;&#8226;">
               </div>
               <div class="checkbox">
                 <label>
-                  <input type="checkbox" name="forget"> Keep me logged in
+                  <input type="checkbox" name="forget" checked> Keep me logged in
                 </label>
               </div>
             </form>
@@ -653,17 +449,17 @@
           <div class="modal-body">
             <form role="form">
               <div class="form-group">
-                <input type="email" class="form-control input-lg" placeholder="Enter email">
+                <input type="email" class="form-control input-lg" placeholder="john@doe.me">
               </div>
               <div class="form-group">
-                <input type="password" class="form-control input-lg" placeholder="Password">
+                <input type="password" class="form-control input-lg" placeholder="&#8226;&#8226;&#8226;&#8226;&#8226;&#8226;&#8226;&#8226;">
               </div>
               <div class="form-group">
-                <input type="password" class="form-control input-lg" placeholder="Confirm Password">
+                <input type="password" class="form-control input-lg" placeholder="&#8226;&#8226;&#8226;&#8226;&#8226;&#8226;&#8226;&#8226;">
               </div>
               <div class="checkbox">
                 <label>
-                  <input type="checkbox" name="agree"> Agree to our <a href="#">terms of use</a> and <a href="#">privacy policy</a>
+                  <input type="checkbox" name="agree" checked> Agree to our <a href="#">terms of use</a> and <a href="#">privacy policy</a>
                 </label>
               </div>
             </form>
