[CREATE] Search View

--- a/index.html
+++ b/index.html
@@ -109,7 +109,11 @@
                       </select>
                     </div>
                   </div>
-                  <div class="col-md-12 col-sm-12"><input type="submit" name="submit" value="Search" class="btn btn-primary btn-lg btn-block"></div>
+                  <div class="col-md-12 col-sm-12">
+                    <a href="search.html">
+                      <input type="submit" name="submit" value="Search" class="btn btn-primary btn-lg btn-block">
+                    </a>
+                  </div>
 
                 </form>
               </div>
