--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                   </div>
                   <div class="col-md-12 col-sm-12">
                     <a href="search.html">
-                      <input type="submit" name="submit" value="Search" class="btn btn-primary btn-lg btn-block">
+                      <input name="submit" value="Search" class="btn btn-primary btn-lg btn-block">
                     </a>
                   </div>
 
