[CREATE] Single Page

--- a/index-signedup.html
+++ b/index-signedup.html
@@ -217,7 +217,7 @@
                 <span><i class="fa fa-clock-o"></i> 1 Y</span>
               </div>
               <div class="property-content">
-                <h3><a href="#">Electric Guitar</a> <small>Lisbon</small></h3>
+                <h3><a href="electric-guitar.html">Electric Guitar</a> <small>Lisbon</small></h3>
               </div>
             </div>
           </div>
