--- a/index.html
+++ b/index.html
@@ -480,16 +480,7 @@
     <!-- end:modal-signup -->
 
     <!-- Hotjar Tracking Code for https://opprdev.github.io/RentString/ -->
-    <script>
-        (function(h,o,t,j,a,r){
-            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-            h._hjSettings={hjid:500298,hjsv:5};
-            a=o.getElementsByTagName('head')[0];
-            r=o.createElement('script');r.async=1;
-            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-            a.appendChild(r);
-        })(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
-    </script>
+    <script src="js/hotjar.js"></script>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
