--- a/search.html
+++ b/search.html
@@ -549,6 +549,9 @@
     </div>
     <!-- end:modal-signup -->
 
+    <!-- Hotjar Tracking Code for https://opprdev.github.io/RentString/ -->
+    <script src="js/hotjar.js"></script>
+
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
