[FIX] Some Buggs

--- a/index-signedup.html
+++ b/index-signedup.html
@@ -202,7 +202,9 @@
           <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="property-container">
               <div class="property-image">
-                <img src="img/img02.jpg" alt="arillo real estate theme">
+                <a href="electric-guitar.html">
+                  <img src="img/img02.jpg" alt="arillo real estate theme">
+                </a>
                 <div class="property-price">
                   <h4>Strings</h4>
                   <span>$55<small>/day</small></span>
