--- a/search.html
+++ b/search.html
@@ -47,8 +47,8 @@
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="index.html">Home</a></li>
             <li><a href="#">Become a Lander</a></li>
-            <li><a href="#modal-signin" class="signin" data-toggle="modal" data-target="#modal-signin">Sign in</a></li>
-            <li><a href="#" class="signup" data-toggle="modal" data-target="#modal-signup">Sign up</a></li>
+            <li><a href="#">John Doe</a></li>
+            <li><a href="index.html" class="signup">Sign out</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container -->
@@ -173,100 +173,102 @@
             <!-- begin:product -->
             <div class="row">
               <div class="col-md-3 col-sm-6 col-xs-12">
-                <div class="property-container">
-                  <div class="property-image">
-                    <img src="img/img02.jpg" alt="arillo real estate theme">
-                    <div class="property-price">
-                      <h4>Strings</h4>
-                      <span>$55<small>/day</small></span>
-                    </div>
-                    <div class="property-status">
-                      <span>For Rent</span>
-                    </div>
-                  </div>
-                  <div class="property-features">
-                    <span><i class="fa fa-calendar-o"></i> Now</span>
-                    <span><i class="fa fa-truck"></i> No</span>
-                    <span><i class="fa fa-clock-o"></i> 1 Y</span>
-                  </div>
-                  <div class="property-content">
-                    <h3><a href="electric-guitar.html" data-toggle="modal" data-target="#modal-signup">Electric Guitar</a> <small>Lisbon</small></h3>
-                  </div>
+            <div class="property-container">
+              <div class="property-image">
+                <a href="electric-guitar.html">
+                  <img src="img/img02.jpg" alt="arillo real estate theme">
+                </a>
+                <div class="property-price">
+                  <h4>Strings</h4>
+                  <span>$55<small>/day</small></span>
+                </div>
+                <div class="property-status">
+                  <span>For Rent</span>
                 </div>
               </div>
-              <!-- break -->
+              <div class="property-features">
+                <span><i class="fa fa-calendar-o"></i> Now</span>
+                <span><i class="fa fa-truck"></i> No</span>
+                <span><i class="fa fa-clock-o"></i> 1 Y</span>
+              </div>
+              <div class="property-content">
+                <h3><a href="electric-guitar.html">Electric Guitar</a> <small>Lisbon</small></h3>
+              </div>
+            </div>
+          </div>
+          <!-- break -->
 
-              <div class="col-md-3 col-sm-6 col-xs-12">
-                <div class="property-container">
-                  <div class="property-image">
-                    <img src="img/img03.jpg" alt="arillo real estate theme">
-                    <div class="property-price">
-                      <h4>Percussion</h4>
-                      <span>$7<small>/day</small></span>
-                    </div>
-                    <div class="property-status">
-                      <span>For Rent</span>
-                    </div>
-                  </div>
-                  <div class="property-features">
-                    <span><i class="fa fa-calendar-o"></i> Now</span>
-                    <span><i class="fa fa-truck"></i> Yes</span>
-                    <span><i class="fa fa-clock-o"></i> 2 Y</span>
-                  </div>
-                  <div class="property-content">
-                    <h3><a href="#" data-toggle="modal" data-target="#modal-signup">Drum</a> <small>Porto</small></h3>
-                  </div>
+          <div class="col-md-3 col-sm-6 col-xs-12">
+            <div class="property-container">
+              <div class="property-image">
+                <img src="img/img03.jpg" alt="arillo real estate theme">
+                <div class="property-price">
+                  <h4>Percussion</h4>
+                  <span>$7<small>/day</small></span>
+                </div>
+                <div class="property-status">
+                  <span>For Rent</span>
                 </div>
               </div>
-              <!-- break -->
+              <div class="property-features">
+                <span><i class="fa fa-calendar-o"></i> Now</span>
+                <span><i class="fa fa-truck"></i> Yes</span>
+                <span><i class="fa fa-clock-o"></i> 2 Y</span>
+              </div>
+              <div class="property-content">
+                <h3><a href="#">Drum</a> <small>Porto</small></h3>
+              </div>
+            </div>
+          </div>
+          <!-- break -->
 
-              <div class="col-md-3 col-sm-6 col-xs-12">
-                <div class="property-container">
-                  <div class="property-image">
-                    <img src="img/img04.jpg" alt="arillo real estate theme">
-                    <div class="property-price">
-                      <h4>Keyboard</h4>
-                      <span>$200<small>/day</small></span>
-                    </div>
-                    <div class="property-status">
-                      <span>For Rent</span>
-                    </div>
-                  </div>
-                  <div class="property-features">
-                    <span><i class="fa fa-calendar-o"></i> 5 days</span>
-                    <span><i class="fa fa-truck"></i> Yes</span>
-                    <span><i class="fa fa-clock-o"></i> 5 M</span>
-                  </div>
-                  <div class="property-content">
-                    <h3><a href="#" data-toggle="modal" data-target="#modal-signup">YAMAHA Piano</a> <small>Lisbon</small></h3>
-                  </div>
+          <div class="col-md-3 col-sm-6 col-xs-12">
+            <div class="property-container">
+              <div class="property-image">
+                <img src="img/img04.jpg" alt="arillo real estate theme">
+                <div class="property-price">
+                  <h4>Keyboard</h4>
+                  <span>$200<small>/day</small></span>
+                </div>
+                <div class="property-status">
+                  <span>For Rent</span>
                 </div>
               </div>
-              <!-- break -->
+              <div class="property-features">
+                <span><i class="fa fa-calendar-o"></i> 5 days</span>
+                <span><i class="fa fa-truck"></i> Yes</span>
+                <span><i class="fa fa-clock-o"></i> 5 M</span>
+              </div>
+              <div class="property-content">
+                <h3><a href="#">YAMAHA Piano</a> <small>Lisbon</small></h3>
+              </div>
+            </div>
+          </div>
+          <!-- break -->
 
-              <div class="col-md-3 col-sm-6 col-xs-12">
-                <div class="property-container">
-                  <div class="property-image">
-                    <img src="img/img05.jpg" alt="arillo real estate theme">
-                    <div class="property-price">
-                      <h4>Strings</h4>
-                      <span>$150<small>/day</small></span>
-                    </div>
-                    <div class="property-status">
-                      <span>For Rent</span>
-                    </div>
-                  </div>
-                  <div class="property-features">
-                    <span><i class="fa fa-calendar-o"></i> 2 days</span>
-                    <span><i class="fa fa-truck"></i> No</span>
-                    <span><i class="fa fa-clock-o"></i> 1 Y</span>
-                  </div>
-                  <div class="property-content">
-                    <h3><a href="#" data-toggle="modal" data-target="#modal-signup">Classic Violin</a> <small>Coimbra</small></h3>
-                  </div>
+          <div class="col-md-3 col-sm-6 col-xs-12">
+            <div class="property-container">
+              <div class="property-image">
+                <img src="img/img05.jpg" alt="arillo real estate theme">
+                <div class="property-price">
+                  <h4>Strings</h4>
+                  <span>$150<small>/day</small></span>
+                </div>
+                <div class="property-status">
+                  <span>For Rent</span>
                 </div>
               </div>
-              <!-- break -->
+              <div class="property-features">
+                <span><i class="fa fa-calendar-o"></i> 2 days</span>
+                <span><i class="fa fa-truck"></i> No</span>
+                <span><i class="fa fa-clock-o"></i> 1 Y</span>
+              </div>
+              <div class="property-content">
+                <h3><a href="#">Classic Violin</a> <small>Coimbra</small></h3>
+              </div>
+            </div>
+          </div>
+          <!-- break -->
             </div>
             <!-- end:product -->
 
