--- a/electric-guitar.html
+++ b/electric-guitar.html
@@ -47,8 +47,8 @@
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="index.html">Home</a></li>
             <li><a href="#">Become a Lander</a></li>
-            <li><a href="#modal-signin" class="signin" data-toggle="modal" data-target="#modal-signin">Sign in</a></li>
-            <li><a href="#" class="signup" data-toggle="modal" data-target="#modal-signup">Sign up</a></li>
+            <li><a href="#">John Doe</a></li>
+            <li><a href="index.html" class="signup">Sign out</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container -->
